--- a/.gitignore
+++ b/.gitignore
@@ -38,13 +38,7 @@ captures/
 
 # IntelliJ
 *.iml
-.idea/workspace.xml
-.idea/tasks.xml
-.idea/gradle.xml
-.idea/assetWizardSettings.xml
-.idea/dictionaries
-.idea/libraries
-.idea/caches
+.idea
 
 # Keystore files
 # Uncomment the following line if you do not want to check your keystore files in.
@@ -70,3 +64,6 @@ fastlane/readme.md
 
 # workspace
 workspace.xml
+
+# MacOS
+.DS_Store
