--- a/.gitignore
+++ b/.gitignore
@@ -65,5 +65,8 @@ fastlane/readme.md
 # workspace
 workspace.xml
 
-# MacOS
-.DS_Store
+# OS generated files
+.DS_Store*
+ehthumbs.db
+Icon?
+Thumbs.db
