--- a/BatB/app/build.gradle
+++ b/BatB/app/build.gradle
@@ -26,4 +26,6 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
+
+    implementation "gun0912.ted:tedpermission:2.1.0"
 }
