--- a/BatB/app/src/main/AndroidManifest.xml
+++ b/BatB/app/src/main/AndroidManifest.xml
@@ -13,6 +13,18 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+
+        <provider
+            android:name="androidx.core.content.FileProvider"
+            android:authorities="com.example.batb"
+            android:exported="false"
+            android:grantUriPermissions="true">
+
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/file_paths" />
+        </provider>
+
         <activity android:name=".ResultActivity"></activity>
         <activity android:name=".PhotoCheckActivity" />
         <activity android:name=".HelpActivity" />
