--- a/BatB/app/build.gradle
+++ b/BatB/app/build.gradle
@@ -35,4 +35,6 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.8.0'
     implementation 'org.jetbrains:annotations-java5:15.0'
     implementation "android.arch.lifecycle:extensions:1.1.1"
+
+    implementation "gun0912.ted:tedpermission:2.1.0"
 }
