--- a/BatB/app/src/main/AndroidManifest.xml
+++ b/BatB/app/src/main/AndroidManifest.xml
@@ -13,7 +13,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
-        <activity android:name=".ResultActivity"></activity>
+        <activity android:name=".RequestActivity"></activity>
+        <activity android:name=".ResultActivity" />
         <activity android:name=".PhotoCheckActivity" />
 
         <provider
