--- a/BatB/app/build.gradle
+++ b/BatB/app/build.gradle
@@ -37,4 +37,5 @@ dependencies {
     implementation "android.arch.lifecycle:extensions:1.1.1"
 
     implementation "gun0912.ted:tedpermission:2.1.0"
+    implementation 'com.squareup.okhttp3:okhttp:3.4.1'
 }
