--- a/BatB/app/build.gradle
+++ b/BatB/app/build.gradle
@@ -39,4 +39,5 @@ dependencies {
     //
     implementation "gun0912.ted:tedpermission:2.1.0"
     implementation 'com.squareup.okhttp3:okhttp:3.4.1'
+    implementation 'com.github.bumptech.glide:glide:3.7.0'
 }
