--- a/BatB/app/src/main/AndroidManifest.xml
+++ b/BatB/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar"
         android:usesCleartextTraffic="true">
-        <activity android:name=".PostActivity"></activity>
+        <activity android:name=".MakeupActivity"></activity>
         <activity android:name=".RequestActivity" />
         <activity android:name=".ResultActivity" />
         <activity android:name=".PhotoCheckActivity" />
